--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-
+    <script src="style/style.css"></script>
   </head>
   <body>
     <h1>Tenebrio-technology.com</h1>
   </body>
-</html>>
+</html>
