--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script src="style/style.css"></script>
+    <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
     <h1>Tenebrio-technology.com</h1>
