--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
-    <h1>Tenebrio-technology.com</h1>
+    <h1>Tenebrio-technology</h1>
   </body>
 </html>
