--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="assets/css/tenebrio.min.css">
   </head>
   <body>
-    <h1>Tenebrio-technology</h1>
+    <header>Tenebrio-technology</header>
   </body>
 </html>
